[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/menus/help_menu/help_menu.gd" type="Script" id=1]
[ext_resource path="res://interface/ext_button.gd" type="Script" id=2]
[ext_resource path="res://interface/menus/BackgroundTilemap.tscn" type="PackedScene" id=3]
[ext_resource path="res://effects/TransitionRect.tscn" type="PackedScene" id=4]

[node name="HelpMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Content" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Pages" type="Control" parent="Content"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = -2.0

[node name="Page0" type="RichTextLabel" parent="Content/Pages"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[center]CONTROLS[/center]

[img]res://interface/menus/help_menu/lmb.png[/img] : Reveal cell
[img]res://interface/menus/help_menu/rmb.png[/img] : Change cell flag

[img]res://interface/menus/help_menu/lmb.png[/img] / [img]res://interface/menus/help_menu/mmb.png[/img] on a revealed cell: Reveal surrounding cells
"
text = "CONTROLS

 : Reveal cell
 : Change cell flag

 /  on a revealed cell: Reveal surrounding cells
"
scroll_active = false

[node name="Page1" type="RichTextLabel" parent="Content/Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[center]RULES[/center]

The game mainly operates on Minesweeper rules, but cells may contain a [color=#e27285]hole[/color], [color=#f8c53a]gold[/color], or a [color=#d0ffea]diamond[/color] instead.
"
text = "RULES

The game mainly operates on Minesweeper rules, but cells may contain a hole, gold, or a diamond instead.
"
scroll_active = false

[node name="Page2" type="RichTextLabel" parent="Content/Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[center]NUMBER COLORS[/center]

[color=#d0ffea]Blue[/color]: Adjacent cell has a diamond [color=#f8c53a]Golden[/color]: Adjacent cell has gold
[color=#e27285]Red[/color]: Adjacent cell has a hole

Color priority goes top-to-bottom.
"
text = "NUMBER COLORS

Blue: Adjacent cell has a diamond Golden: Adjacent cell has gold
Red: Adjacent cell has a hole

Color priority goes top-to-bottom.
"
scroll_active = false

[node name="Page3" type="RichTextLabel" parent="Content/Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[center]OBJECTIVE[/center]

Get [color=#f8c53a]$1,000,000[/color] by correctly flagging cells and finishing levels. Avoid incorrectly flagging cells or revealing filled cells.
"
text = "OBJECTIVE

Get $1,000,000 by correctly flagging cells and finishing levels. Avoid incorrectly flagging cells or revealing filled cells.
"
scroll_active = false

[node name="PreviousButton" type="Button" parent="Content"]
margin_right = 32.0
margin_bottom = 13.0
text = "<"
script = ExtResource( 2 )

[node name="NextButton" type="Button" parent="Content"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 13.0
text = ">"
script = ExtResource( 2 )

[node name="BackButton" type="Button" parent="Content"]
visible = false
margin_right = 40.0
margin_bottom = 13.0
text = "Back"
script = ExtResource( 2 )

[node name="BackgroundTilemap" parent="." instance=ExtResource( 3 )]

[node name="TransitionRect" parent="." instance=ExtResource( 4 )]
